--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "buymecoffee-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.ts"
+    "start": "nodemon"
   },
   "keywords": [],
   "author": "",
