--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "buymecoffee-backend",
   "version": "1.0.0",
   "description": "",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon"
