--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^6.3.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "lottie": "^0.0.1",
     "nanoid": "^5.0.9",
     "nodemon": "^3.1.9"
   },
