--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.3.1",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "kill-port": "^2.0.1",
     "lottie": "^0.0.1",
     "nanoid": "^5.0.9",
     "node-fetch": "^3.3.2",
