--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lottie": "^0.0.1",
     "nanoid": "^5.0.9",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9"
   },
   "devDependencies": {
