--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "lottie": "^0.0.1",
     "nanoid": "^5.0.9",
     "node-fetch": "^3.3.2",
-    "nodemailer": "^6.10.0",
-    "nodemon": "^3.1.9"
+    "nodemailer": "^6.10.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -28,6 +27,7 @@
     "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^22.13.1",
     "cors": "^2.8.5",
+    "nodemon": "^3.1.9",
     "prisma": "^6.3.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
