--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "ts-node src/index.ts",
     "start": "node dist/src/index.js",
+    "ehleh": "nodemon",
     "build": "tsc"
   },
   "keywords": [],
